--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -1,2 +1,11 @@
-$white: #ffffff;
-$black: #000000;
+$c-white: #ffffff;
+$c-black: #000000;
+$c-grey-light: #c4c4c4;
+$c-blue-dark: #183855;
+$c-blue-light: #7ba8d3;
+$c-btn-green: #25a77b;
+$c-btn-green-hover: #44c59a;
+$c-btn-blue: #2797c4;
+$c-btn-blue-hover: #4cb9e4;
+$c-textbox-blue: #e9f9ff;
+$c-textbox-green: #ebfff3;
