--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,17 +6,17 @@
 
 
 body {
-    padding: 20px;
-    background-color: pink;
     font-family: 'Roboto', sans-serif;
     line-height: 1.3;
 
-    @media #{$mq-900-down} {
-        padding: 10px;
-    }
 }
 
-.container {
+main {
     width: 80%;
-    margin: 40px auto;
+    margin: 0 auto;
+
+    @media #{$mq-620-down} {
+        width: 90%;
+    }
+
 }
