added copy to clipboard

--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -9,3 +9,5 @@ $c-btn-blue: #2797c4;
 $c-btn-blue-hover: #4cb9e4;
 $c-textbox-blue: #e9f9ff;
 $c-textbox-green: #ebfff3;
+$c-grey: rgb(126, 126, 126);
+$c-grey-alpha: rgba(77, 77, 77, 0);
